# ChangeLog for app-office/openoffice-infra
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Feb 2009; Yar Odin (yarodin) <yarodin@gmail.com>
  -files/3.0.0/gentoo-ReturnInteger.hdl,
  -files/3.0.0/gentoo-XVBAToOOEventDescGen.hdl,
  -files/3.0.0/gentoo-XVBAToOOEventDescGen.hpp, +files/3.0.1,
  +files/3.0.1/gentoo-ReturnInteger.hdl, openoffice-infra-2.4.2.ebuild,
  -files/3.0.0/gentoo-ReturnInteger.hpp, -files/3.0.0/gentoo-configure.diff,
  -files/3.0.0/gentoo-hunspell.diff, +files/3.0.1/gentoo-ReturnInteger.hpp,
  +files/3.0.1/gentoo-XVBAToOOEventDescGen.hdl,
  +files/2.4.2/gentoo-python-2.3.4.diff, -openoffice-infra-3.0.0.ebuild,
  +files/2.4.2/gentoo-fixsandbox.diff, -files/3.0.0,
  -files/3.0.0/gentoo-completion_matches.diff,
  -files/3.0.0/gentoo-infragentoo.diff, -files/3.0.0/gentoo-mkdepend.diff,
  +files/3.0.1/gentoo-XVBAToOOEventDescGen.hpp,
  +files/3.0.1/gentoo-completion_matches.diff,
  +openoffice-infra-3.0.1.ebuild, -files/3.0.0/gentoo-nojavanostax.diff,
  -files/3.0.0/gentoo-ru_dict.diff, -files/3.0.0/gentoo-scripts.diff,
  -files/3.0.0/gentoo-solenv_kde_mess.diff,
  -files/3.0.0/gentoo-vba_incl.diff, +files/3.0.1/gentoo-configure.diff,
  +files/3.0.1/gentoo-hunspell.diff, +files/3.0.1/gentoo-infragentoo.diff,
  +files/3.0.1/gentoo-mkdepend.diff, +files/3.0.1/gentoo-nojavanostax.diff,
  +files/3.0.1/gentoo-ru_dict.diff, +files/3.0.1/gentoo-vba_incl.diff,
  +files/3.0.1/gentoo-buildfix-mono-2-2.diff,
  +files/3.0.1/gentoo-scripts.diff,
  +files/3.0.1/gentoo-solenv_kde_mess.diff, -files/gentoo-fixsandbox.diff:
  Version bump to 3.0.1 for openoffice-infra, and some fixes for version 2.4.2

  12 Jan 2009; Yar Odin (yarodin) <yarodin@gmail.com> +files/2.4.2,
  +files/2.4.2/build-gcc43-missingincludes.diff,
  +files/2.4.2/gentoo-completion_matches.diff,
  +files/2.4.2/gentoo-configure.diff, +files/2.4.2/gentoo-gentooinfra.diff,
  +files/2.4.2/gentoo-mkdepend.diff, +files/2.4.2/gentoo-scripts.diff,