@@ -44,7 +44,7 @@ DIST lp_solve_5.5.0.10_source.tar.gz 769268 RMD160 17e16c6c9fe9807e148d0b96bd8a3
 DIST oox.2008-02-29.tar.bz2 454902 RMD160 ff23feb96d9f950e230c419529862de2f748635b SHA1 b8e9136219e2d3d67a2353579a7f2afb2a21d563 SHA256 112ea899a8f8f69cbeeaffa7ec219fc275190c4c8cad2416a5587283dcd89685
 DIST unowinreg.dll 6144 RMD160 9e2a2789a96842a2aec747a62dee3db3e8370761 SHA1 712720da502d36175cd7aa05cb1862ee0330638c SHA256 f563e522922133db9340b0306711c2d8767cc3481dd9e7d9b0d059906d12653c
 DIST writerfilter.2008-02-29.tar.bz2 745803 RMD160 5f1642ee32757bf235ab8ada9f88023608dbf0e6 SHA1 398ebd9a18af5ae4a08305443cd4b16036ad1a37 SHA256 be55befd2694a8f5871a96cf7d33919dece8b890a081d7da493c6889db27dd94
-EBUILD openoffice-infra-2.4.2.ebuild 23302 RMD160 f585e6163d917dc0b75095384942d0e86ea3cc97 SHA1 3adde6a63e41ce665e69e6955f799dbc5db77ed8 SHA256 ed02f1853872bd4e4fda5343c0ff5505e96b64f48b81518d3e663a18c8385de8
+EBUILD openoffice-infra-2.4.2.ebuild 23180 RMD160 26385fcd741eb56144b7a2eff3706d0409b8745d SHA1 7d1b7ef46188a55cf07c663100b191bed174f4f8 SHA256 588c1de1af069ee52e99a6643109b00669928d7bc94b8b763b8413136c9f7c56
 EBUILD openoffice-infra-3.0.1.ebuild 23287 RMD160 4f740617237ab1e1a3eda208b4ee197e9f4d0e5b SHA1 6f8c74cb2d7e5fe87a954b5ef1957f528fede59b SHA256 3e5b7f55ea069f7884c5be6ec8c90a4becd81ec0c59a9993c483ce576a571293
-MISC ChangeLog 2895 RMD160 85a407cf2a9fc0da5e1856386764a223d5eb8205 SHA1 e798bb920f07db386c8ba06cf97ad68ff70cf6da SHA256 61602ab9c0ed5d24ea2147bba1f98dadd71d24b87864fc349e98dc147a7f543d
+MISC ChangeLog 3034 RMD160 9b174e42ba4ebc2517a84ada81cd525f6a5d8338 SHA1 eabe57add3ebbe1d1c5cf6d91d33fb6778e55187 SHA256 9f32a30de68b1980a497e094fb085278c82bdbcb9ea95f0f07158bc864fc8440
 MISC metadata.xml 786 RMD160 7ade4465c360cd6e056bb17ad84d734b0632bfa0 SHA1 02dc5171d3660ff4471d40eb9f344b1e7d195254 SHA256 cf87cefd0eca5cfdf69024e119d003b02d7cba4e18cf05a939dcc4766af4ed25
